# school_lists

./: .gitignore  README.md  pyproject.toml
src/school_list/: __init__.py  cli.py  gk100_importer.py  models.py  repository.py  web.py
src/school_list/static/: school-detail.js  schools.js  styles.css
src/school_list/templates/: base.html  detail.html  index.html
tests/: test_repository.py  test_web.py
