[project]
name = "school-list"
version = "0.1.0"
description = "Query and manage Gaokao university information."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "school_list maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[project.scripts]
school-list = "school_list.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
